31-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: traininglog
spec:
  replicas: 1
  selector:
     matchLabels:
       app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: postgresql01
      containers:
      - name: postgresql
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: pvc-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: traininglog
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
